@@ -175,6 +175,7 @@ exportMethods("%&%",
               Cholesky,
               Schur,
               band,
+              ct,
               expand,
               expand1,
               expand2,
