@@ -117,16 +117,20 @@ setMethod("diag", c(x = "indMatrix"),
 setMethod("diag<-", c(x = "indMatrix"),
           function(x, value) `diag<-`(.M2kind(x, "n"), value))
 
-setMethod("t", c(x = "indMatrix"),
-          function(x) {
-              r <- new("indMatrix")
-              r@Dim <- x@Dim[2:1]
-              r@Dimnames = x@Dimnames[2:1]
-              r@perm <- x@perm
-              if(x@margin == 1L)
-                  r@margin <- 2L
-              r
-          })
+.tmp <- function(x) {
+    r <- new("indMatrix")
+    r@Dim <- x@Dim[2:1]
+    r@Dimnames = x@Dimnames[2:1]
+    r@perm <- x@perm
+    if(x@margin == 1L)
+        r@margin <- 2L
+    r
+}
+
+setMethod( "t", c(x = "indMatrix"), .tmp)
+setMethod("ct", c(x = "indMatrix"), .tmp)
+
+rm(.tmp)
 
 setMethod("forceSymmetric", c(x = "indMatrix"),
           function(x, ...) forceSymmetric(.M2kind(x, "n"), ...))
@@ -233,13 +237,17 @@ setAs("nsparseMatrix", "pMatrix",
 setAs("indMatrix", "pMatrix",
       function(from) new("pMatrix", from))
 
-setMethod("t", c(x = "pMatrix"),
-          function(x) {
-              r <- new("pMatrix")
-              r@Dim <- x@Dim
-              r@Dimnames = x@Dimnames[2:1]
-              r@perm <- x@perm
-              if(x@margin == 1L)
-                  r@margin <- 2L
-              r
-          })
+.tmp <- function(x) {
+    r <- new("pMatrix")
+    r@Dim <- x@Dim
+    r@Dimnames = x@Dimnames[2:1]
+    r@perm <- x@perm
+    if(x@margin == 1L)
+        r@margin <- 2L
+    r
+}
+
+setMethod( "t", c(x = "pMatrix"), .tmp)
+setMethod("ct", c(x = "pMatrix"), .tmp)
+
+rm(.tmp)
