@@ -168,7 +168,7 @@ static R_CallMethodDef CallEntries[] = {
 	CALLDEF(R_sparse_band, 3),
 	CALLDEF(R_sparse_diag_get, 2),
 	CALLDEF(R_sparse_diag_set, 2),
-	CALLDEF(R_sparse_transpose, 2),
+	CALLDEF(R_sparse_transpose, 3),
 	CALLDEF(R_sparse_force_symmetric, 3),
 	CALLDEF(R_sparse_symmpart, 2),
 	CALLDEF(R_sparse_skewpart, 2),
