@@ -21,8 +21,8 @@ SEXP R_sparse_diag_get(SEXP, SEXP);
 SEXP sparse_diag_set(SEXP, const char *, SEXP);
 SEXP R_sparse_diag_set(SEXP, SEXP);
 
-SEXP sparse_transpose(SEXP, const char *, int);
-SEXP R_sparse_transpose(SEXP, SEXP);
+SEXP sparse_transpose(SEXP, const char *, char, int);
+SEXP R_sparse_transpose(SEXP, SEXP, SEXP);
 
 SEXP sparse_force_symmetric(SEXP, const char *, char, char);
 SEXP R_sparse_force_symmetric(SEXP, SEXP, SEXP);
